--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,6 +19,9 @@ main:
   - name: Experience
     url: experience/
     weight: 20
+  - name: Industrial Experience
+    url: ind_experience/
+    weight: 21
   - name: Projects
     url: projects/
     weight: 30
