--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -60,3 +60,9 @@ features:
     enable: false
   privacy_pack:
     enable: false
+
+icon:
+  set: "fontawesome"
+  pack:
+    fab: true
+    fas: true    
